--- a/posit-academy/src/posit_academy/03_create_select_columns.ipynb
+++ b/posit-academy/src/posit_academy/03_create_select_columns.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "[252 rows x 10 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1971,6 +1971,166 @@
         "plotlyServerURL": "https://plot.ly"
        },
        "data": [
+        {
+         "hovertemplate": "maximum_growth=1.0<br>date=%{x}<br>growth=%{y}<extra></extra>",
+         "legendgroup": "1.0",
+         "line": {
+          "color": "#636efa",
+          "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
+         },
+         "mode": "lines",
+         "name": "1.0",
+         "orientation": "v",
+         "showlegend": true,
+         "type": "scatter",
+         "x": [
+          "2021-01-04"
+         ],
+         "xaxis": "x",
+         "y": [
+          1
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "maximum_growth=1.015<br>date=%{x}<br>growth=%{y}<extra></extra>",
+         "legendgroup": "1.015",
+         "line": {
+          "color": "#EF553B",
+          "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
+         },
+         "mode": "lines",
+         "name": "1.015",
+         "orientation": "v",
+         "showlegend": true,
+         "type": "scatter",
+         "x": [
+          "2021-01-13",
+          "2021-01-25"
+         ],
+         "xaxis": "x",
+         "y": [
+          1.0295056783074026,
+          1.0418062257065017
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "maximum_growth=1.016<br>date=%{x}<br>growth=%{y}<extra></extra>",
+         "legendgroup": "1.016",
+         "line": {
+          "color": "#00cc96",
+          "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
+         },
+         "mode": "lines",
+         "name": "1.016",
+         "orientation": "v",
+         "showlegend": true,
+         "type": "scatter",
+         "x": [
+          "2021-02-03",
+          "2021-02-12",
+          "2021-02-24"
+         ],
+         "xaxis": "x",
+         "y": [
+          1.0349992630886868,
+          1.0632808241690033,
+          1.0607406902107972
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "maximum_growth=1.024<br>date=%{x}<br>growth=%{y}<extra></extra>",
+         "legendgroup": "1.024",
+         "line": {
+          "color": "#ab63fa",
+          "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
+         },
+         "mode": "lines",
+         "name": "1.024",
+         "orientation": "v",
+         "showlegend": true,
+         "type": "scatter",
+         "x": [
+          "2021-03-05",
+          "2021-03-16",
+          "2021-03-25",
+          "2021-04-06",
+          "2021-04-15",
+          "2021-04-26",
+          "2021-05-05",
+          "2021-05-14",
+          "2021-05-25",
+          "2021-06-04",
+          "2021-06-15",
+          "2021-06-24",
+          "2021-07-06",
+          "2021-07-15",
+          "2021-07-26",
+          "2021-08-04",
+          "2021-08-13",
+          "2021-08-24",
+          "2021-09-02",
+          "2021-09-14",
+          "2021-09-23",
+          "2021-10-04",
+          "2021-10-13",
+          "2021-10-22",
+          "2021-11-02",
+          "2021-11-11",
+          "2021-11-22",
+          "2021-12-02",
+          "2021-12-13",
+          "2021-12-22"
+         ],
+         "xaxis": "x",
+         "y": [
+          1.0381797907910766,
+          1.070814604328764,
+          1.0564414691201178,
+          1.1008714817432699,
+          1.1269425727718068,
+          1.1315904578099474,
+          1.1261778211201556,
+          1.1278694844959012,
+          1.13172820810745,
+          1.1430127810901043,
+          1.147525422780601,
+          1.1529029621723703,
+          1.1737235765835587,
+          1.17817948204041,
+          1.1950062614371346,
+          1.1896991805308694,
+          1.2073554964413848,
+          1.2122816529138478,
+          1.2259874116811462,
+          1.200613384658074,
+          1.2022158533967393,
+          1.1620823569973129,
+          1.1791982272961716,
+          1.2281356038206446,
+          1.2513072094204318,
+          1.2563387897316927,
+          1.2654371704927794,
+          1.2368368309462126,
+          1.2616622317844048,
+          1.2691176367748973
+         ],
+         "yaxis": "y"
+        },
         {
          "line": {
           "color": "#000000",
@@ -2019,7 +2179,6 @@
           "2021-12-13",
           "2021-12-22"
          ],
-         "xaxis": "x",
          "y": [
           1,
           1.0295056783074026,
@@ -2057,134 +2216,19 @@
           1.2368368309462126,
           1.2616622317844048,
           1.2691176367748973
-         ],
-         "yaxis": "y"
-        },
-        {
-         "marker": {
-          "color": [
-           1,
-           1.002,
-           1.004,
-           1.004,
-           1.005,
-           1.011,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019,
-           1.019
-          ]
-         },
-         "mode": "lines",
-         "name": "growth",
-         "type": "scatter",
-         "x": [
-          "2021-01-04",
-          "2021-01-13",
-          "2021-01-25",
-          "2021-02-03",
-          "2021-02-12",
-          "2021-02-24",
-          "2021-03-05",
-          "2021-03-16",
-          "2021-03-25",
-          "2021-04-06",
-          "2021-04-15",
-          "2021-04-26",
-          "2021-05-05",
-          "2021-05-14",
-          "2021-05-25",
-          "2021-06-04",
-          "2021-06-15",
-          "2021-06-24",
-          "2021-07-06",
-          "2021-07-15",
-          "2021-07-26",
-          "2021-08-04",
-          "2021-08-13",
-          "2021-08-24",
-          "2021-09-02",
-          "2021-09-14",
-          "2021-09-23",
-          "2021-10-04",
-          "2021-10-13",
-          "2021-10-22",
-          "2021-11-02",
-          "2021-11-11",
-          "2021-11-22",
-          "2021-12-02",
-          "2021-12-13",
-          "2021-12-22"
-         ],
-         "xaxis": "x",
-         "y": [
-          1,
-          1.0295056783074026,
-          1.0418062257065017,
-          1.0349992630886868,
-          1.0632808241690033,
-          1.0607406902107972,
-          1.0381797907910766,
-          1.070814604328764,
-          1.0564414691201178,
-          1.1008714817432699,
-          1.1269425727718068,
-          1.1315904578099474,
-          1.1261778211201556,
-          1.1278694844959012,
-          1.13172820810745,
-          1.1430127810901043,
-          1.147525422780601,
-          1.1529029621723703,
-          1.1737235765835587,
-          1.17817948204041,
-          1.1950062614371346,
-          1.1896991805308694,
-          1.2073554964413848,
-          1.2122816529138478,
-          1.2259874116811462,
-          1.200613384658074,
-          1.2022158533967393,
-          1.1620823569973129,
-          1.1791982272961716,
-          1.2281356038206446,
-          1.2513072094204318,
-          1.2563387897316927,
-          1.2654371704927794,
-          1.2368368309462126,
-          1.2616622317844048,
-          1.2691176367748973
-         ],
-         "yaxis": "y2"
+         ]
         }
        ],
        "layout": {
+        "legend": {
+         "title": {
+          "text": "maximum_growth"
+         },
+         "tracegroupgap": 0
+        },
+        "margin": {
+         "t": 60
+        },
         "template": {
          "data": {
           "bar": [
@@ -3008,7 +3052,7 @@
          "anchor": "y",
          "domain": [
           0,
-          0.94
+          1
          ],
          "title": {
           "text": "date"
@@ -3023,11 +3067,6 @@
          "title": {
           "text": "growth"
          }
-        },
-        "yaxis2": {
-         "anchor": "x",
-         "overlaying": "y",
-         "side": "right"
         }
        }
       }
@@ -3043,29 +3082,26 @@
     "# Select every 7 rows to minimize number of data points plotted\n",
     "index = index.iloc[::7]\n",
     "\n",
+    "# Convert maximum_growth to string for discrete color legend\n",
+    "index['maximum_growth'] = index['maximum_growth'].astype(str)\n",
+    "\n",
     "# View updated data frame\n",
     "index\n",
     "\n",
-    "# Create a blank figure with a secondary y-axis\n",
-    "fig = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "# Create a line plot for growth over time\n",
+    "fig = px.line(data_frame=index,\n",
+    "                 x='date',\n",
+    "                 y='growth',\n",
+    "                 color='maximum_growth'\n",
+    "                 )\n",
     "\n",
-    "# Add first line plot for maximum growth steps\n",
+    "# Add steps for cumulative growth changes\n",
     "fig.add_trace(\n",
     "    go.Scatter(x=index['date'], y=index['growth'],\n",
     "               name=\"maximum growth\",\n",
     "               line=dict(shape='hv', width=3, color=\"#000000\"),\n",
     "               opacity=0.25,\n",
-    "               mode='lines+markers'),\n",
-    "    secondary_y=False\n",
-    ")\n",
-    "\n",
-    "# Add second line plot growth over time\n",
-    "fig.add_trace(\n",
-    "    go.Scatter(x=index['date'], y=index['growth'],\n",
-    "               name=\"growth\",\n",
-    "               marker=dict(color=index['maximum_growth']),\n",
-    "               mode='lines'),\n",
-    "    secondary_y=True\n",
+    "               mode='lines+markers')\n",
     ")\n",
     "\n",
     "# Set titles\n",
